--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,8 @@
 body {
     background-color: #D1C0CF;
+    font-family: 'Courier New', Courier, monospace;
+    color: #985277;
+    text-align: center;
 }
 
 button {
@@ -14,7 +17,7 @@ button {
     outline: none;
 }
 
-button:hover {
+button:hover, button:focus {
     color: #985277;
     background-color: #FFCFD2;
     border-color: #985277;
@@ -57,6 +60,12 @@ td {
 
 .hidden {
     background-color: #9EBC9E;
+}
+
+td.hidden:hover {
+    color: #985277;
+    background-color: #FFAFC5;
+    border-color: #985277;
 }
 
 .hidden .td-text {
