--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,9 +6,9 @@ body {
 }
 
 button {
-    margin-left: 7px;
-    margin-right: 7px;
-    padding: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
+    padding: 10px 17px;
     text-align: center;
     border: 2px solid #36453B;
     border-radius: 25px;
